<resources>
    <string name="app_name">DentAssist</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sudah_cek_kesehatan_mulutmu">Sudah cek kesehatan mulutmu?</string>
    <string name="klinik_terdekat">Klinik Terdekat</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="klinik_pilihan_kami_di_sekelilingmu">Klinik pilihan kami di sekelilingmu</string>
    <string name="item_image">item image</string>
    <string name="obat">Obat</string>
    <string name="untuk_kebutuhan_kesehatan_mulutmu">Untuk kebutuhan kesehatan mulutmu</string>
    <string name="artikel">Artikel</string>
    <string name="untuk_wacana_harianmu_seputar_kesehatan_mulut">Untuk wacana harianmu seputar kesehatan mulut</string>
    <string name="detail">Detail</string>
    <string name="scan">Scan</string>
    <string name="arahkan_ke_mulut">Arahkan ke mulut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foto_yang_telah_dikirimkan">Foto yang telah dikirimkan</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="menemukan_kesulitan">Menemukan kesulitan saat menggunakan aplikasi kami?</string>
    <string name="hubungi_customer_service">Hubungi customer service DentAssist melalui chat WhatsApp di bawah ini</string>
    <string name="whatsapp_logo">whatsapp logo</string>
    <string name="chat_whatsapp">Chat WhatsApp</string>
    <string name="title">Title</string>

    <string name="password_error">Password harus minimal 8 karakter dan mengandung huruf serta angka</string>
    <string name="email_error">Invalid email format</string>
    <string name="name_error">Nama tidak boleh kosong</string>
    <string name="kota_error">Nama kota harus dimulai dengan huruf kapital dan sisanya huruf kecil</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kategori">Kategori</string>
    <string name="customer_support">Customer Support</string>
    <string name="disease_image">disease image</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="akurasi">Akurasi</string>
    <string name="sariawan">Sariawan</string>
    <string name="_95">95%</string>
    <string name="clinic_recmoendation_title">Klink terdekat yang disarankan untuk anda</string>
    <string name="produk_rekomendasi_untuk_anda">Produk rekomendasi untuk anda</string>
    <string name="artikel_terkait_penyakit_anda">Artikel terkait penyakit anda</string>
    <string name="gagal_mendapatkan_data_klinik">Gagal mendapatkan data klinik</string>
    <string name="product_not_found">Tidak terdapat produk yang direkomendasikan</string>
    <string name="article_not_found">Tidak terdapat artikel yang direkomendasikan</string>
    <string name="logo">logo</string>
    <string name="click_here">Click here</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="perbarui_data">Perbarui Data</string>
    <string name="username">Username</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="kota">Kota</string>
    <string name="masukkan_kota">Masukkan Kota</string>


</resources>