<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.prediction.PredictionFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        >
        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:elevation="8dp"
            android:contentDescription="@string/deskripsi"
            android:src="@drawable/pink_gradient_2"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/disease_image"
            android:layout_width="320dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_background"
            android:src="@drawable/image_preview"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            app:layout_constraintTop_toTopOf="@id/disease_image"
            app:layout_constraintStart_toStartOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="@id/background_image"
            android:contentDescription="@string/disease_image"
            android:layout_marginTop="-30dp"
            android:elevation="10dp"
            />
        <TextView
            android:id="@+id/disease_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_penyakit"
            app:layout_constraintTop_toBottomOf="@id/disease_image"
            app:layout_constraintStart_toStartOf="@id/background_image"
            app:layout_constraintEnd_toStartOf="@id/accuracy_title"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textColor="@color/font_grey"
            android:includeFontPadding="false"
            />
        <TextView
            android:id="@+id/disease_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sariawan"
            app:layout_constraintStart_toStartOf="@id/disease_title"
            app:layout_constraintTop_toBottomOf="@id/disease_title"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:includeFontPadding="false"
            />
        <TextView
            android:id="@+id/accuracy_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/accuracy_title"
            app:layout_constraintStart_toStartOf="@id/accuracy_title"
            android:text="@string/_95"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/accuracy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akurasi"
            app:layout_constraintTop_toBottomOf="@id/disease_image"
            app:layout_constraintEnd_toEndOf="@id/background_image"
            app:layout_constraintStart_toEndOf="@id/disease_title"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textColor="@color/font_grey"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="280dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="32dp"
            android:elevation="12dp"
            android:background="@drawable/rounded_background_2" >
            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@color/font_grey"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/deskripsi" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:justificationMode="inter_word"
                android:text="@string/lorem_ipsum_paragraph"
                android:textColor="#555555"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_title" />

            <TextView
                android:id="@+id/clinic_recommendation_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/clinic_recmoendation_title"
                android:textSize="20sp"
                android:textColor="@color/font_grey"
                android:fontFamily="@font/poppins_bold"
                />
            <LinearLayout
                android:id="@+id/clinic_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/clinic_recommendation_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <!-- dynamic article item -->
            </LinearLayout>

            <TextView
                android:id="@+id/product_recommendation_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clinic_div"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/produk_rekomendasi_untuk_anda"
                android:textSize="20sp"
                android:textColor="@color/font_grey"
                android:fontFamily="@font/poppins_bold"
                />
            <LinearLayout
                android:id="@+id/product_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/product_recommendation_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <!-- dynamic product item -->
            </LinearLayout>

            <TextView
            android:id="@+id/article_recommendation_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/product_div"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/artikel_terkait_penyakit_anda"
            android:textSize="20sp"
            android:textColor="@color/font_grey"
            android:fontFamily="@font/poppins_bold"
            />
            <LinearLayout
                android:id="@+id/article_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/article_recommendation_header"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp"
                >
                <!-- dynamic article item -->
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="350dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
