<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.CsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/first_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_background_stroke"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="?attr/backgroundColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="36sp"
                android:textColor="@color/pink"
                android:paddingHorizontal="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menemukan_kesulitan"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="14sp"
                android:textColor="?attr/iconColor"
                android:paddingHorizontal="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hubungi_customer_service"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"
                android:textColor="?attr/iconColor"
                android:paddingHorizontal="20dp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/whatsapp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_background_stroke"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="?attr/backgroundColor"
        app:layout_constraintTop_toBottomOf="@id/first_div"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            >
            <ImageView
                android:id="@+id/whatsapp_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/whatsapp_logo"
                android:contentDescription="@string/whatsapp_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_whatsapp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/whatsapp_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="2dp"
                android:layout_marginStart="8dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/black_arrow_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/whatsapp_logo"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>