<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hibahuns.dentassist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_to_fragmentProfile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_fragmentHome_to_fragmentCs"
            app:destination="@id/navigation_cs" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hibahuns.dentassist.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_fragmentDashboard_to_fragmentPrediction"
            app:destination="@id/navigation_prediction" />
        <action
            android:id="@+id/action_to_fragmentProfile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hibahuns.dentassist.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_fragmentNotifications_to_fragmentPrediction"
            app:destination="@id/navigation_prediction" />
    </fragment>

    <fragment
        android:id="@+id/navigation_prediction"
        android:name="com.hibahuns.dentassist.ui.prediction.PredictionFragment"
        android:label="Prediction"
        tools:layout="@layout/fragment_prediction">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.hibahuns.dentassist.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_fragmentProfile_to_fragmentCs"
            app:destination="@id/navigation_cs" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cs"
        android:name="com.hibahuns.dentassist.ui.customer_support.CsFragment"
        android:label="CS"
        tools:layout="@layout/fragment_cs">

    </fragment>
    <action
        android:id="@+id/action_to_fragmentProfile"
        app:destination="@id/navigation_profile" />
</navigation>