<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/div_profile_picture"
        android:layout_width="156dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hospital"
            android:contentDescription="@string/edit_profil"
            app:shapeAppearanceOverlay="@style/Circular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/edit_icon"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/circle_background"
            app:cardCornerRadius="24dp"
            app:cardBackgroundColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_24"
                android:contentDescription="@string/edit_profil"
                android:padding="6sp"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/edit_profil"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_profile_picture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tNama">

        <com.hibahuns.dentassist.ui.custom.NameEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/masukkan_username"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/gNama"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout" />

    <TextView
        android:id="@+id/textKota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/kota"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gNama" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kotaEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textKota">

        <com.hibahuns.dentassist.ui.custom.KotaEditText
            android:id="@+id/kotaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColorHint="@color/grey"
            android:hint="@string/masukkan_kota"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/gKota"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kotaEditTextLayout" />


    <TextView
        android:id="@+id/tEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gKota" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tEmail">

        <com.hibahuns.dentassist.ui.custom.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/masukkan_email"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout" />

    <TextView
        android:id="@+id/tPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tPassword">

        <com.hibahuns.dentassist.ui.custom.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/masukkan_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/button2_disabled"
        android:text="@string/perbarui_data"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="458dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07797538" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>